--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "name": "EventDepth_UNet",
-  "n_gpu": 1,
+  "n_gpu": 0,
   "dsec_dir": "/home/siyuan/workspace/CVbyDL/",
   "arch": {
       "type": "UNet",
@@ -10,7 +10,6 @@
   },
   "data_loader": {
       "args":{
-          "data_dir": "data/",
           "batch_size": 2,
           "shuffle": true,
           "validation_split": 0.1,
@@ -25,7 +24,7 @@
           "amsgrad": true
       }
   },
-  "loss": "nll_loss",
+  "loss": "photometric_loss_l1",
   "metrics": [
       "accuracy", "top_k_acc"
   ],
