--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "name": "EventDepth_UNet",
   "n_gpu": 0,
-  "dsec_dir": "/home/lxz/DSEC/",
+  "dsec_dir": "/home/siyuan/workspace/CVbyDL/",
   "arch": {
       "type": "DebugNet",
       "args": {
