--- a/colab_config.json
+++ b/colab_config.json
@@ -3,14 +3,14 @@
   "n_gpu": 1,
   "dsec_dir": "/content/drive/MyDrive/CVbyDL/",
   "arch": {
-      "type": "UNet",
+      "type": "MonoDepthNet",
       "args": {
           "n_channels": 15
       }
   },
   "data_loader": {
       "args":{
-          "batch_size": 16,
+          "batch_size": 8,
           "shuffle": true,
           "validation_split": 0.1,
           "num_workers": 1
