--- a/colab_config.json
+++ b/colab_config.json
@@ -46,5 +46,7 @@
       "early_stop": 10,
 
       "tensorboard": true
-  }
+  },
+  "resume": true,
+  "checkpoint": "../checkpoint-epoch14.pth."
 }
