--- a/colab_config.json
+++ b/colab_config.json
@@ -10,7 +10,7 @@
   },
   "data_loader": {
       "args":{
-          "batch_size": 2,
+          "batch_size": 4,
           "shuffle": true,
           "validation_split": 0.1,
           "num_workers": 1
@@ -48,5 +48,5 @@
       "tensorboard": true
   },
   "resume": true,
-  "checkpoint": "../checkpoint-epoch14.pth."
+  "checkpoint": "../checkpoint-epoch14.pth"
 }
